[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Components/RadialMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/Menu/MenuBase.png" type="Texture" id=2]
[ext_resource path="res://sprites/Menu/MenuSE.png" type="Texture" id=3]
[ext_resource path="res://sprites/Menu/MenuSEHover.png" type="Texture" id=4]
[ext_resource path="res://sprites/Menu/MenuSEDisable.png" type="Texture" id=5]
[ext_resource path="res://sprites/Menu/MenuNW.png" type="Texture" id=6]
[ext_resource path="res://sprites/Menu/MenuNWHover.png" type="Texture" id=7]
[ext_resource path="res://sprites/Menu/MenuNWDisable.png" type="Texture" id=8]
[ext_resource path="res://sprites/Menu/MenuNE.png" type="Texture" id=9]
[ext_resource path="res://sprites/Menu/MenuNEHover.png" type="Texture" id=10]
[ext_resource path="res://sprites/Menu/MenuNEDisable.png" type="Texture" id=11]




[node name="RadialMenu" type="Control"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -509.0
margin_top = -300.0
margin_right = -429.0
margin_bottom = -220.0
rect_pivot_offset = Vector2( -0.004498, -0.00374842 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Grow Direction", "Margin", "Rect" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Popup" type="Popup" parent="CenterContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="CenterContainer/Popup" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="TextureButton" parent="CenterContainer/Popup" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 3.0
margin_right = 41.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HighButton" type="TextureButton" parent="CenterContainer/Popup" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_top = -40.0
margin_right = -2.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="LowButton" type="TextureButton" parent="CenterContainer/Popup" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = -40.0
margin_right = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="CenterContainer/Popup/BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="CenterContainer/Popup/HighButton" to="." method="_on_HighButton_pressed"]

[connection signal="pressed" from="CenterContainer/Popup/LowButton" to="." method="_on_LowButton_pressed"]


